[gd_scene load_steps=18 format=3 uid="uid://cvftwxr80krae"]

[ext_resource type="Script" path="res://Scripts/chicken_fight/chicken_punching.gd" id="1_w2ihy"]
[ext_resource type="PackedScene" uid="uid://cjoarybbdodvg" path="res://Scenes/chicken_fight/punch_spawn.tscn" id="2_6ewom"]
[ext_resource type="FontFile" uid="uid://c4c4re1prp0j5" path="res://Assets/Fonts/Summer Break.otf" id="3_bl5mt"]
[ext_resource type="Texture2D" uid="uid://cdwmxoxnr6xb6" path="res://Assets/random_photos/placeholder_fists.png" id="3_wbab7"]
[ext_resource type="PackedScene" uid="uid://dfaxoa3wsgmy6" path="res://Scenes/horse/horse_race_winnings.tscn" id="4_datas"]
[ext_resource type="Texture2D" uid="uid://nlpuxfwlb1p" path="res://Assets/random_photos/placeholder_chicken.png" id="4_j4f78"]
[ext_resource type="Texture2D" uid="uid://d27x67bbeg8j4" path="res://Assets/random_photos/placeholder_punch.png" id="5_k6qx7"]
[ext_resource type="Texture2D" uid="uid://c1ln885l6bv6j" path="res://Assets/random_photos/HealthUI (1).png" id="6_wgjhu"]
[ext_resource type="Animation" uid="uid://bqhlxoy7hkgra" path="res://Assets/Animations/Menu/popup.res" id="7_p1x0w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8a65t"]
size = Vector2(228, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tnn6s"]
size = Vector2(227.5, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_csiec"]
size = Vector2(227, 17.5)

[sub_resource type="LabelSettings" id="LabelSettings_4f68k"]
font = ExtResource("3_bl5mt")
font_size = 45

[sub_resource type="Animation" id="Animation_8mnos"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_be80x"]
_data = {
"RESET": SubResource("Animation_8mnos"),
"popup": ExtResource("7_p1x0w")
}

[sub_resource type="LabelSettings" id="LabelSettings_yj2rp"]
font = ExtResource("3_bl5mt")
font_size = 75

[sub_resource type="LabelSettings" id="LabelSettings_1jt8d"]
font = ExtResource("3_bl5mt")
font_size = 100
font_color = Color(0, 0, 0, 1)

[node name="chicken_punching" type="Node2D"]
script = ExtResource("1_w2ihy")

[node name="spawn_punch_timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="punch_spawn" parent="." instance=ExtResource("2_6ewom")]
visible = false
position = Vector2(-125, 96)
script = null

[node name="perfect_zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="perfect_zone"]
position = Vector2(303, 367.5)
shape = SubResource("RectangleShape2D_8a65t")

[node name="meh_zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="meh_zone"]
position = Vector2(303, 352)
shape = SubResource("RectangleShape2D_tnn6s")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="meh_zone"]
position = Vector2(303, 384.25)
shape = SubResource("RectangleShape2D_csiec")

[node name="can_hit_timer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
offset_left = 185.0
offset_top = 355.0
offset_right = 532.0
offset_bottom = 378.0
text = "-----------------------------------------------      <- hit here"

[node name="MissLabel" type="Label" parent="."]
visible = false
offset_left = 390.0
offset_top = 294.0
offset_right = 737.0
offset_bottom = 335.0
text = "WHIFF"
label_settings = SubResource("LabelSettings_4f68k")

[node name="PlaceholderFists2" type="Sprite2D" parent="."]
position = Vector2(688, 490)
scale = Vector2(2.52035, 2.52035)
texture = ExtResource("3_wbab7")

[node name="PlaceholderChicken" type="Sprite2D" parent="."]
position = Vector2(638, 273)
scale = Vector2(0.526, 0.526)
texture = ExtResource("4_j4f78")

[node name="ProgressBar" type="ProgressBar" parent="PlaceholderChicken"]
offset_right = 4.0
offset_bottom = 27.0

[node name="Sprite2D" type="Sprite2D" parent="PlaceholderChicken"]
position = Vector2(-21.2352, -323.007)
scale = Vector2(1.155, 1)
texture = ExtResource("6_wgjhu")
vframes = 7

[node name="PlaceholderPunch" type="Sprite2D" parent="."]
position = Vector2(648, 310)
scale = Vector2(1.33596, 1.37222)
texture = ExtResource("5_k6qx7")

[node name="Button" type="Button" parent="."]
offset_left = 927.0
offset_top = 96.0
offset_right = 1063.0
offset_bottom = 123.0
text = "start (testing)"

[node name="temp punch ani" type="Timer" parent="."]

[node name="WinPanel" type="Panel" parent="."]
visible = false
z_index = 1
offset_left = 96.0
offset_top = 16.0
offset_right = 1056.0
offset_bottom = 624.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="WinPanel"]
libraries = {
"": SubResource("AnimationLibrary_be80x")
}

[node name="HBoxContainer" type="VBoxContainer" parent="WinPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -575.0
offset_top = -310.5
offset_right = 575.0
offset_bottom = 310.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="WinPanel/HBoxContainer"]
layout_mode = 2
theme_override_constants/line_spacing = 0
text = "YOU BEAT THE CHICKEN"
label_settings = SubResource("LabelSettings_yj2rp")
horizontal_alignment = 1

[node name="Winnings" parent="WinPanel/HBoxContainer" instance=ExtResource("4_datas")]
layout_mode = 2
text = "YOU WIN: $"

[node name="Results" type="Label" parent="WinPanel/HBoxContainer"]
layout_mode = 2
text = "
"
label_settings = SubResource("LabelSettings_yj2rp")
horizontal_alignment = 1

[node name="Return" type="Label" parent="WinPanel/HBoxContainer"]
layout_mode = 2
text = "
"
label_settings = SubResource("LabelSettings_yj2rp")
horizontal_alignment = 1

[node name="Start_Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="StartCountdown" type="Label" parent="Start_Timer"]
offset_top = 192.0
offset_right = 1149.0
offset_bottom = 375.0
text = "READY
(SPACE TO SKIP COUNTDOWN)"
label_settings = SubResource("LabelSettings_1jt8d")
horizontal_alignment = 1

[connection signal="timeout" from="spawn_punch_timer" to="." method="_on_spawn_punch_timer_timeout"]
[connection signal="area_entered" from="perfect_zone" to="." method="_on_perfect_zone_area_entered"]
[connection signal="area_exited" from="perfect_zone" to="." method="_on_perfect_zone_area_exited"]
[connection signal="area_entered" from="meh_zone" to="." method="_on_meh_zone_area_entered"]
[connection signal="area_exited" from="meh_zone" to="." method="_on_meh_zone_area_exited"]
[connection signal="timeout" from="can_hit_timer" to="." method="_on_can_hit_timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="temp punch ani" to="." method="_on_temp_punch_ani_timeout"]
[connection signal="timeout" from="Start_Timer" to="." method="_on_start_timer_timeout"]
